[project]
name = "ipsak"
version = "0.1.0"
description = "The IP Swiss Army Knife — fast IP, CIDR, and domain information queries for network operations"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Sean Reifschneider" },
]
keywords = [
    "ip",
    "cidr",
    "whois",
    "dns",
    "asn",
    "geolocation",
    "rpki",
    "dnsbl",
    "traceroute",
    "networking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "dnspython>=2.6",
    "ipwhois>=1.3",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

# AIDEV-NOTE: Traceroute now uses raw ICMP sockets directly (no icmplib needed).
# Requires root or CAP_NET_RAW for the fast parallel engine; falls back to
# system traceroute/tracepath when unprivileged.

[project.urls]
Homepage = "https://github.com/linsomniac/ipsak"
Repository = "https://github.com/linsomniac/ipsak"
Issues = "https://github.com/linsomniac/ipsak/issues"
Changelog = "https://github.com/linsomniac/ipsak/releases"

[project.scripts]
ipsak = "ipsak.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipsak"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
